# portfolio-analytics-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
benchmarks/: __init__.py  app.py  fixture.py  locustfile.py  reporting.py  run_load_test.py
docs/: architecture.md  csv-import.md  decisions.md  demo-video-captions.srt  demo-video-script.md  demo-video-verification.md  demo.md  deployment.md  interview-guide.md  methodology.md  performance.md  resume-project-entry.md  项目说明-零基础.md
docs/examples/: transactions.csv
migrations/: env.py
migrations/versions/: 20260722_0001_initial_schema.py  20260722_0002_require_portfolio_owner.py
scripts/: build_demo_video.py  container_smoke.py  demo_flow.py
src/portfolio_analytics_api/: __init__.py  main.py
tests/contract/: market_data_contract.py  test_deepseek_insight_generator.py  test_twelve_data_provider.py  test_yfinance_provider.py
tests/integration/: conftest.py  test_migrations.py  test_persistent_api.py  test_postgres_repositories.py  test_redis_market_data_cache.py  test_redis_rate_limit.py
tests/unit/: conftest.py  test_analytics.py  test_authentication.py  test_container_smoke.py  test_csv_import.py  test_deepseek_insight_generator.py  test_demo_flow.py  test_demo_video_assets.py  test_deployment_config.py  test_health.py  test_holdings.py  test_insight_cache.py  test_insights.py  test_load_benchmark.py  test_market_data_cache.py  test_market_data_provider_factory.py  (+11 more)
(+41 files in other folders)
