[project]
name = "portfolio-analytics-api"
version = "1.2.0"
description = "Ledger Lens: explainable portfolio analytics API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "curl-cffi>=0.15,<1",
    "fastapi>=0.139.2",
    "httpx>=0.28.1,<1",
    "openai>=2,<3",
    "pandas>=2.2,<4",
    "pwdlib[argon2]>=0.3,<1",
    "pydantic-settings>=2.10,<3",
    "pyjwt>=2.10,<3",
    "redis>=7,<9",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn>=0.51.0",
    "yfinance>=1.4,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests", "benchmarks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "benchmarks", "scripts"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "contract: optional tests that access a real external market-data service",
]

[tool.coverage.run]
branch = true
source = ["portfolio_analytics_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "locust>=2.43,<3",
    "mypy>=2.3.0",
    "pandas-stubs>=2.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
